# rhythmbox-spotify

./: .autotools  .cproject  .gitignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  Makefile.in  spotify-prefs.ui
po/: ChangeLog
src/: Makefile.am  Makefile.in  appkey.c  audio.c  audio.h  rb-spotify-plugin.c  rb-spotify-plugin.h  rb-spotify-source.c  rb-spotify-source.h  rb-spotify-src.c  rb-spotify-src.h  spotify.plugin.in
